# partdb

./: .gitignore  README.md  partdb.py  pyproject.toml  schema.sql
data/: db1.mdb  insert_csv.sh  tsv_to_insert.py
static/: style.css
templates/: iquery.html  layout.html  query_form.html  query_results.html
